// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deveria renderizar ExpenseList com expeses  1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Despesas
    </div>
    <div
      className="show-for-desktop"
    >
      Despesa
    </div>
    <div
      className="show-for-desktop"
    >
      Valor
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Balas"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-345600000}
      description="Aluguel"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createdAt={345600000}
      description="Cartão de credito"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`Deveria renderizar ExpenseList sem expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Despesas
    </div>
    <div
      className="show-for-desktop"
    >
      Despesa
    </div>
    <div
      className="show-for-desktop"
    >
      Valor
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        Não há despesas
      </span>
    </div>
  </div>
</div>
`;
